# Walmart-Capstone-Project

./: .gitignore  NLTK_Download_Script.py  README.md  Reddit_Scraper.py  Top Comments.csv  Top Posts.csv  common_word_finder.py  crawler.py  data.py  pyproject.toml  reddit_sentiment.py  requirements.txt  sample_comments.csv
.github/workflows/: ci.yml
tests/: test_sentiment.py
